PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.7
- Zend Engine:
  . Fixed bug #54423 (classes from dl()'ed extensions are not destroyed). 
    (Tony, Dmitry)
  . Fixed bug #54372 (Crash accessing global object itself returned from its
    __get() handle). (Dmitry)
  . Fixed bug #54358 (Closure, use and reference). (Dmitry)
  . Fixed bug #54367 (Use of closure causes problem in ArrayAccess). (Dmitry)
  . Fixed bug #54039 (use() of static variables in lambda functions can break
     staticness). (Dmitry)
  . Fixed bug #54262 (Crash when assigning value to a dimension in a non-array).
    (Dmitry)

- Core:
  . Fixed a crash inside dtor for error handling. (Ilia)
  . Implemented FR #54459 (Range function accuracy). (Adam)
  . Added PHP_MANDIR constant telling where the manpages were installed into,
    and an --man-dir argument to php-config. (Hannes)
  . Fixed bug #54238 (use-after-free in substr_replace()). (Stas)
    (CVE-2011-1148)
  . Fixed bug #54180 (parse_url() incorrectly parses path when ? in fragment).
    (tomas dot brastavicius at quantum dot lt, Pierrick)
  . Fixed bug #48465 (sys_get_temp_dir() possibly inconsistent when using 
    TMPDIR on Windows). (Pierre)

- cURL
  . Added CURLINFO_REDIRECT_URL support. (Daniel Stenberg, Pierre)

- DateTime extension:
  . Fixed bug #54340 (DateTime::add() method bug). (Adam)
  . Fixed bug #54316 (DateTime::createFromFormat does not handle trailing '|'
    correctly). (Adam)
  . Fixed bug #54283 (new DatePeriod(NULL) causes crash). (Felipe)

- DBA extension:
  . Fixed bug #54242 (dba_insert returns true if key already exists). (Felipe)

- Exif extesion:
  . Fixed bug #54121 (error message format string typo). (Ilia)

- Filter extension:
  . Fixed bug #53037 (FILTER_FLAG_EMPTY_STRING_NULL is not implemented). (Ilia)
  
- intl extension: